@@ -4,37 +4,48 @@ import br.com.inproutservices.atividades_complementares_service.dtos.Solicitacao
 import br.com.inproutservices.atividades_complementares_service.entities.SolicitacaoAtividadeComplementar;
 import br.com.inproutservices.atividades_complementares_service.enums.StatusSolicitacaoComplementar;
 import br.com.inproutservices.atividades_complementares_service.repositories.SolicitacaoAtividadeComplementarRepository;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.EntityNotFoundException;
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @Service
 public class SolicitacaoService {
 
     private final SolicitacaoAtividadeComplementarRepository repository;
+    private final RestTemplate restTemplate;
+    private final ObjectMapper objectMapper;
 
-    public SolicitacaoService(SolicitacaoAtividadeComplementarRepository repository) {
+    // URL do Monólito dentro da rede Docker (nome do container)
+    // Se estiver rodando local sem docker, use "http://localhost:8080"
+    private static final String MONOLITO_URL = "http://inprout-monolito:8080";
+
+    public SolicitacaoService(SolicitacaoAtividadeComplementarRepository repository, RestTemplateBuilder restTemplateBuilder) {
         this.repository = repository;
+        this.restTemplate = restTemplateBuilder.build();
+        this.objectMapper = new ObjectMapper();
     }
 
     @Transactional
     public SolicitacaoAtividadeComplementar criar(SolicitacaoDTO.Request dto) {
-        // TODO: Validar se OS e Usuário existem via chamadas HTTP (FeignClient) aos outros microsserviços
-
         SolicitacaoAtividadeComplementar nova = SolicitacaoAtividadeComplementar.builder()
                 .osId(dto.osId())
                 .lpuId(dto.lpuId())
                 .quantidade(dto.quantidade())
                 .solicitanteId(dto.solicitanteId())
-                .solicitanteNomeSnapshot(dto.solicitanteNome()) // Opcional
-                .valorUnitarioSnapshot(dto.valorUnitarioLpu()) // Importante para histórico
+                .solicitanteNomeSnapshot(dto.solicitanteNome())
+                .valorUnitarioSnapshot(dto.valorUnitarioLpu())
                 .justificativa(dto.justificativa())
                 .status(StatusSolicitacaoComplementar.PENDENTE_COORDENADOR)
                 .build();
-
         return repository.save(nova);
     }
 
@@ -43,11 +54,24 @@ public class SolicitacaoService {
                 .orElseThrow(() -> new EntityNotFoundException("Solicitação não encontrada: " + id));
     }
 
-    public List<SolicitacaoAtividadeComplementar> listarPendentes() {
-        return repository.findByStatusIn(List.of(
-                StatusSolicitacaoComplementar.PENDENTE_COORDENADOR,
-                StatusSolicitacaoComplementar.PENDENTE_CONTROLLER
-        ));
+    /**
+     * Filtra pendências por ROLE.
+     */
+    public List<SolicitacaoAtividadeComplementar> listarPendentes(String role) {
+        if (role == null) return Collections.emptyList();
+        String roleUpper = role.toUpperCase();
+
+        if (roleUpper.contains("ADMIN")) {
+            return repository.findByStatusIn(List.of(
+                    StatusSolicitacaoComplementar.PENDENTE_COORDENADOR,
+                    StatusSolicitacaoComplementar.PENDENTE_CONTROLLER
+            ));
+        } else if (roleUpper.contains("CONTROLLER")) {
+            return repository.findByStatus(StatusSolicitacaoComplementar.PENDENTE_CONTROLLER);
+        } else {
+            // Default: Coordenador
+            return repository.findByStatus(StatusSolicitacaoComplementar.PENDENTE_COORDENADOR);
+        }
     }
 
     public List<SolicitacaoAtividadeComplementar> listarPorSolicitante(Long solicitanteId) {
@@ -59,17 +83,21 @@ public class SolicitacaoService {
         SolicitacaoAtividadeComplementar s = buscarPorId(id);
 
         if (s.getStatus() != StatusSolicitacaoComplementar.PENDENTE_COORDENADOR) {
-            throw new RuntimeException("Solicitação não está pendente para coordenador.");
+            throw new RuntimeException("Status inválido para ação do coordenador.");
         }
 
-        // Aplica edições
-        s.setLpuAprovadaId(dto.lpuId() != null ? dto.lpuId() : s.getLpuId());
-        s.setQuantidadeAprovada(dto.quantidade() != null ? dto.quantidade() : s.getQuantidade());
+        // Define a proposta para o item NOVO
+        s.setLpuAprovadaId(dto.lpuId());
+        s.setQuantidadeAprovada(dto.quantidade());
         s.setBoqAprovado(dto.boq());
-        s.setStatusRegistroAprovado(dto.statusRegistro() != null ? dto.statusRegistro() : "ATIVO");
+        s.setStatusRegistroAprovado(dto.statusRegistro());
         s.setJustificativaCoordenador(dto.justificativa());
 
-        // Atualiza estado
+        // Salva o JSON das alterações propostas nos itens ANTIGOS
+        if (dto.alteracoesItensExistentesJson() != null && !dto.alteracoesItensExistentesJson().isBlank()) {
+            s.setAlteracoesPropostasJson(dto.alteracoesItensExistentesJson());
+        }
+
         s.setAprovadorCoordenadorId(dto.aprovadorId());
         s.setDataAcaoCoordenador(LocalDateTime.now());
         s.setStatus(StatusSolicitacaoComplementar.PENDENTE_CONTROLLER);
@@ -85,9 +113,71 @@ public class SolicitacaoService {
             throw new RuntimeException("Solicitação não está pendente para controller.");
         }
 
-        // TODO: INTEGRAR COM MICROSERVIÇO DE OS (Criar Item)
-        // Exemplo: osClient.criarItem(s.getOsId(), s.getLpuAprovadaId(), s.getQuantidadeAprovada(), ...);
-        System.out.println("INTEGRAÇÃO: Enviando comando para criar item na OS " + s.getOsId());
+        try {
+            // 1. APLICAR ALTERAÇÕES NOS ITENS EXISTENTES (Se houver Proposta)
+            if (s.getAlteracoesPropostasJson() != null && !s.getAlteracoesPropostasJson().isBlank()) {
+                List<Map<String, Object>> alteracoes = objectMapper.readValue(
+                        s.getAlteracoesPropostasJson(),
+                        new TypeReference<List<Map<String, Object>>>() {}
+                );
+
+                for (Map<String, Object> alt : alteracoes) {
+                    Long itemId = ((Number) alt.get("itemId")).longValue();
+
+                    // Se tiver mudança de status
+                    if (alt.containsKey("novoStatus")) {
+                        String novoStatus = (String) alt.get("novoStatus");
+                        restTemplate.patchForObject(
+                                MONOLITO_URL + "/os/detalhe/" + itemId + "/status",
+                                Map.of("status", novoStatus),
+                                Void.class
+                        );
+                    }
+
+                    // Se tiver edição de valores (LPU, Qtd, BOQ)
+                    if (alt.containsKey("novaQtd") || alt.containsKey("novaLpuId")) {
+                        // Monta payload de atualização
+                        // Nota: O backend do monólito espera { lpu: {id: ...}, quantidade: ..., boq: ... }
+                        Object novaLpuId = alt.get("novaLpuId"); // Pode ser null se não mudou, tratar se necessário
+                        Object novaQtd = alt.get("novaQtd");
+                        Object novoBoq = alt.get("novoBoq");
+
+                        // Aqui assumimos que se o campo veio no JSON, ele deve ser atualizado.
+                        // O ideal seria buscar o item original para fazer merge, mas vamos mandar o que temos.
+                        if (novaLpuId != null && novaQtd != null) {
+                            Map<String, Object> updatePayload = Map.of(
+                                    "quantidade", novaQtd,
+                                    "boq", novoBoq != null ? novoBoq : "",
+                                    "lpu", Map.of("id", novaLpuId)
+                            );
+
+                            restTemplate.put(
+                                    MONOLITO_URL + "/os/detalhe/" + itemId,
+                                    updatePayload
+                            );
+                        }
+                    }
+                }
+            }
+
+            // 2. CRIAR O NOVO ITEM (Solicitado e Aprovado)
+            // Endpoint imaginário: POST /os/detalhe (Adicionar item na OS)
+            Map<String, Object> novoItemPayload = Map.of(
+                    "os", Map.of("id", s.getOsId()),
+                    "lpu", Map.of("id", s.getLpuAprovadaId()),
+                    "quantidade", s.getQuantidadeAprovada(),
+                    "boq", s.getBoqAprovado() != null ? s.getBoqAprovado() : "",
+                    "statusRegistro", s.getStatusRegistroAprovado() != null ? s.getStatusRegistroAprovado() : "ATIVO"
+            );
+
+            // Chama o endpoint de criação no monólito
+            // Dica: Verifique se o seu controller de OS tem um método POST para criar itens
+            restTemplate.postForObject(MONOLITO_URL + "/os/detalhe", novoItemPayload, Object.class);
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new RuntimeException("Erro ao integrar com o Monólito: " + e.getMessage());
+        }
 
         s.setAprovadorControllerId(aprovadorId);
         s.setDataAcaoController(LocalDateTime.now());
@@ -102,18 +192,20 @@ public class SolicitacaoService {
 
         if (motivo == null || motivo.isBlank()) throw new RuntimeException("Motivo obrigatório.");
 
-        if ("COORDINATOR".equalsIgnoreCase(roleOrigem)) {
+        if (roleOrigem != null && roleOrigem.toUpperCase().contains("COORDINATOR")) {
             s.setAprovadorCoordenadorId(aprovadorId);
             s.setDataAcaoCoordenador(LocalDateTime.now());
             s.setStatus(StatusSolicitacaoComplementar.REJEITADO);
             s.setMotivoRecusa(motivo);
-        } else if ("CONTROLLER".equalsIgnoreCase(roleOrigem)) {
-            // Controller devolve para coordenador (Regra original) ou rejeita final?
-            // Baseado no código original: "rejeitarPeloController" voltava para o coordenador
+        } else if (roleOrigem != null && roleOrigem.toUpperCase().contains("CONTROLLER")) {
             s.setAprovadorControllerId(aprovadorId);
             s.setDataAcaoController(LocalDateTime.now());
             s.setStatus(StatusSolicitacaoComplementar.PENDENTE_COORDENADOR);
             s.setJustificativaController(motivo);
+        } else {
+            // Fallback
+            s.setStatus(StatusSolicitacaoComplementar.REJEITADO);
+            s.setMotivoRecusa(motivo);
         }
 
         return repository.save(s);
